--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Japanese Words</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <style>
         li {
